# NAM

./: .gitattributes  .gitignore  CMakeLists.txt  CMakePresets.json  Makefile  NAM.sln  README.md
.github/workflows/: ci.yml
NAM/: NAM.vcxproj  NAM.vcxproj.filters  Temp.map  console.cpp  console.h  main.cpp  map.cpp  map.h  resources.h
NAM_Console/: CMakeLists.txt  app_state.cpp  app_state.h  console.h  console_app.cpp  console_app.h  frame.h  input.h  input_decoder.cpp  input_decoder.h  journal.cpp  journal.h  main.cpp  messages.cpp  messages.h  renderer.cpp  renderer.h  settings.cpp  settings.h  terminal.cpp  terminal.h  terminal_posix.cpp  terminal_windows.cpp
NAM_SDL/: .gitkeep  CMakeLists.txt
NAM_draft/: NAM_draft.vcxproj  NAM_draft.vcxproj.filters  console.cpp  console.h  main.cpp
SDL_test/: CMakeLists.txt  SDL_test.vcxproj  main.cpp
cmake/: nam_sanitizers.cmake  nam_warnings.cmake  version.h.in
cmake/toolchains/: mingw-w64-x86_64.cmake
core/: CMakeLists.txt  coordinates.h  direction.h  game_event.h  game_state.cpp  game_state.h  map.cpp  map.h  map_parser.cpp  map_parser.h  move_outcome.h  objective.cpp  objective.h  pcg32.cpp  pcg32.h  resources.h  terrain.h  visibility.cpp  visibility.h  world_generation.cpp  world_generation.h
tests/: CMakeLists.txt  doctest_main.cpp  test_app_state.cpp  test_console_app.cpp  test_determinism.cpp  test_game_events.cpp  test_input_decoder.cpp  test_journal.cpp  test_map_parser.cpp  test_messages.cpp  test_movement.cpp  test_objective.cpp  test_pcg32.cpp  test_renderer.cpp  test_rendering.cpp  test_settings.cpp  test_stamina.cpp  test_terrain_coords.cpp  test_visibility.cpp  test_world_generation.cpp
tests/cli/: run_cli_test.cmake  stdin_beacon.txt  stdin_moves.txt
tests/fixtures/: beacon-corridor.map  legacy.map  malformed-header.map  oversized.map  row-width-mismatch.map  spawn-not-walkable.map  spawn-out-of-bounds.map  truncated.map  unknown-terrain.map  valid-crlf.map  valid-lf.map
