# Placeholder: NAM_SDL is the future graphical (SDL2) version of NAM.
#
# When you're ready to start, add sources here and link against nam_core:
#
#     add_executable(nam_sdl main.cpp)
#     target_link_libraries(nam_sdl PRIVATE nam_core SDL2::SDL2 SDL2_image::SDL2_image SDL2_ttf::SDL2_ttf)
#
# SDL2 is provided via CMake FetchContent (see SDL_test/CMakeLists.txt for a
# working reference).

message(STATUS "NAM_SDL is a scaffold; no sources yet.")
